--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "axios": "^1.7.2",
+    "firebase": "^10.12.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -19,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
